force-app/main/default/objects/ATI_Job__c/fields/Guild_Request_Comments__c.field-meta.xml
<CustomField>
    <fullName>Guild_Request_Comments__c</fullName>
    <description>Explanatory comments for Guild Request</description>
    <label>Guild Request Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>