force-app/main/default/objects/ATI_Job__c/fields/Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Home_Phone__c</fullName>
    <description>Home Phone of Project Site Contact</description>
    <formula>Project_Site_Contact_Name__r.HomePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Home Phone</label>
    <type>Text</type>
</CustomField>