force-app/main/default/objects/ATI_Job__c/fields/Inspected1__c.field-meta.xml
<CustomField>
    <fullName>Inspected1__c</fullName>
    <label>Inspected1</label>
    <type>Date</type>
</CustomField>