force-app/main/default/objects/ATI_Job__c/fields/Inspected1Formula__c.field-meta.xml
<CustomField>
    <fullName>Inspected1Formula__c</fullName>
    <formula>DATETIMEVALUE(Inspected1__c) + 0.2917</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inspected1Formula</label>
    <type>DateTime</type>
</CustomField>