force-app/main/default/objects/ATI_Job__c/fields/Inspected__c.field-meta.xml
<CustomField>
    <fullName>Inspected__c</fullName>
    <description>Date when PD inspects the property for the first time.  Managed Program Repair Admin to input.</description>
    <inlineHelpText>Update XACT</inlineHelpText>
    <label>Inspected</label>
    <type>DateTime</type>
</CustomField>