force-app/main/default/objects/ATI_Job__c/fields/Insurance_Adjuster_Broker__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Adjuster_Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Insurance Adjuster/Broker for this Job-- referenced in New Job VF page</description>
    <label>Insurance Adjuster/Broker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Insurance Adjuster/Broker)</relationshipLabel>
    <relationshipName>ATIJobIAB1</relationshipName>
    <type>Lookup</type>
</CustomField>