force-app/main/default/objects/ATI_Job__c/fields/Intake_Status__c.field-meta.xml
<CustomField>
    <fullName>Intake_Status__c</fullName>
    <label>Intake Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Requested</fullName>
            </value>
            <value>
                <fullName>Reviewed/Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>