force-app/main/default/objects/ATI_Job__c/fields/Is_AE1_s_Mgr_s_Mgr_s_Mgr_Logged_In__c.field-meta.xml
<CustomField>
    <fullName>Is_AE1_s_Mgr_s_Mgr_s_Mgr_Logged_In__c</fullName>
    <formula>IF( Account_Executive_1__r.Manager.Manager.ManagerId = $User.Id,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is AE1&apos;s Mgr&apos;s Mgr&apos;s Mgr Logged In</label>
    <type>Checkbox</type>
</CustomField>