force-app/main/default/objects/ATI_Job__c/fields/Is_AE1_the_Logged_in_User__c.field-meta.xml
<CustomField>
    <fullName>Is_AE1_the_Logged_in_User__c</fullName>
    <formula>IF(  Account_Executive_1__c  = $User.Id,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is AE1 the Logged in User</label>
    <type>Checkbox</type>
</CustomField>