force-app/main/default/objects/ATI_Job__c/fields/Is_AE2_s_Manager_the_Logged_In_User__c.field-meta.xml
<CustomField>
    <fullName>Is_AE2_s_Manager_the_Logged_In_User__c</fullName>
    <formula>IF( Account_Executive_2__r.ManagerId = $User.Id,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is AE2&apos;s Manager the Logged In User</label>
    <type>Checkbox</type>
</CustomField>