force-app/main/default/objects/ATI_Job__c/fields/Is_AE2_s_Mgr_s_Mgr_the_Logged_In_User__c.field-meta.xml
<CustomField>
    <fullName>Is_AE2_s_Mgr_s_Mgr_the_Logged_In_User__c</fullName>
    <formula>IF( Account_Executive_2__r.Manager.Manager.ManagerId = $User.Id,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is AE2&apos;s Mgr&apos;s Mgr&apos;s Mgr Logged In User</label>
    <type>Checkbox</type>
</CustomField>