force-app/main/default/objects/ATI_Job__c/fields/Is_AE2s_Manager_s_Mgr_the_Logged_In_User__c.field-meta.xml
<CustomField>
    <fullName>Is_AE2s_Manager_s_Mgr_the_Logged_In_User__c</fullName>
    <formula>IF( Account_Executive_2__r.Manager.ManagerId = $User.Id,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is AE2s Manager&apos;s Mgr the Logged In User</label>
    <type>Checkbox</type>
</CustomField>