force-app/main/default/objects/ATI_Job__c/fields/Is_BDM1_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_BDM1_Active__c</fullName>
    <formula>IF(  Account_Executive_1__r.IsActive  = TRUE,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is BDM1 Active</label>
    <type>Checkbox</type>
</CustomField>