force-app/main/default/objects/ATI_Job__c/fields/Is_BDM2_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_BDM2_Active__c</fullName>
    <formula>IF( Account_Executive_2__r.IsActive = TRUE,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is BDM2 Active</label>
    <type>Checkbox</type>
</CustomField>