force-app/main/default/objects/ATI_Job__c/fields/Is_BDM2_s_Office_Same_as_Logged_In_User__c.field-meta.xml
<CustomField>
    <fullName>Is_BDM2_s_Office_Same_as_Logged_In_User__c</fullName>
    <formula>IF( TEXT(Account_Executive_2__r.Office__c) = TEXT($User.Office__c),True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is BDM2&apos;s Office Same as Logged In User</label>
    <type>Checkbox</type>
</CustomField>