force-app/main/default/objects/ATI_Job__c/fields/Is_BDM_the_Logged_in_User__c.field-meta.xml
<CustomField>
    <fullName>Is_BDM_the_Logged_in_User__c</fullName>
    <formula>IF(  Business_Development_Manager__c  = $User.Id,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is BDM the Logged in User</label>
    <type>Checkbox</type>
</CustomField>