force-app/main/default/objects/ATI_Job__c/fields/Is_Collector_the_logged_in_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Collector_the_logged_in_User__c</fullName>
    <formula>IF (  Project_Manager__r.Collector__c = $User.Id, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Collector the logged in User</label>
    <type>Checkbox</type>
</CustomField>