force-app/main/default/objects/ATI_Job__c/fields/Is_Manager_s_Manager_the_Logged_In_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Manager_s_Manager_the_Logged_In_User__c</fullName>
    <formula>IF( Account_Executive_1__r.Manager.ManagerId = $User.Id,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is AE1&apos;s Manager&apos;s Mgr Logged In User</label>
    <type>Checkbox</type>
</CustomField>