force-app/main/default/objects/ATI_Job__c/fields/Is_Office_Same_as_Logged_In_User_Office__c.field-meta.xml
<CustomField>
    <fullName>Is_Office_Same_as_Logged_In_User_Office__c</fullName>
    <formula>IF ( Office2__r.Name = TEXT($User.Office__c), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Office Same as Logged In User Office</label>
    <type>Checkbox</type>
</CustomField>