force-app/main/default/objects/ATI_Job__c/fields/Is_PD_the_Logged_in_User__c.field-meta.xml
<CustomField>
    <fullName>Is_PD_the_Logged_in_User__c</fullName>
    <formula>IF(  Project_Manager__c  = $User.Id,True,False)</formula>
    <label>Is PD the Logged in User</label>
    <type>Checkbox</type>
</CustomField>