force-app/main/default/objects/ATI_Job__c/fields/Is_PM_the_Logged_in_User__c.field-meta.xml
<CustomField>
    <fullName>Is_PM_the_Logged_in_User__c</fullName>
    <formula>IF(  Project_Manager_new__c  = $User.Id,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is PM the Logged in User</label>
    <type>Checkbox</type>
</CustomField>