force-app/main/default/objects/ATI_Job__c/fields/Is_RM_The_Logged_in_User__c.field-meta.xml
<CustomField>
    <fullName>Is_RM_The_Logged_in_User__c</fullName>
    <formula>IF(  Branch_Manager__c = $User.Id,True,False)</formula>
    <label>Is RM The Logged in User</label>
    <type>Checkbox</type>
</CustomField>