force-app/main/default/objects/ATI_Job__c/fields/Job_Account_Names__c.field-meta.xml
<CustomField>
    <fullName>Job_Account_Names__c</fullName>
    <label>Job Account Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>