force-app/main/default/objects/ATI_Job__c/fields/Job_Lost_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Lost_Date__c</fullName>
    <description>Date/Time field to record when the job is updated to Lost stage for reporting purposes.</description>
    <label>Job Lost Date</label>
    <type>DateTime</type>
</CustomField>