force-app/main/default/objects/ATI_Job__c/fields/Job_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Name__c</fullName>
    <description>Job Name field is used on New Job VF page, used to pass along to Timberline, and used to update Opportunity Name field via &apos;Opportunity Naming Convention&apos; workflow.</description>
    <label>Job Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>