force-app/main/default/objects/ATI_Job__c/fields/Job_Name_Length__c.field-meta.xml
<CustomField>
    <fullName>Job_Name_Length__c</fullName>
    <description>This field counts the number of characters of the Job Name.</description>
    <formula>LEN( Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Name Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>