force-app/main/default/objects/ATI_Job__c/fields/Job_Not_Sold__c.field-meta.xml
<CustomField>
    <fullName>Job_Not_Sold__c</fullName>
    <label>Job Not Sold</label>
    <type>DateTime</type>
</CustomField>