force-app/main/default/objects/ATI_Job__c/fields/Job_Number_Compare__c.field-meta.xml
<CustomField>
    <fullName>Job_Number_Compare__c</fullName>
    <formula>Name &lt;&gt; Job_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Number Compare</label>
    <type>Checkbox</type>
</CustomField>