force-app/main/default/objects/ATI_Job__c/fields/Job_Number_Last_5__c.field-meta.xml
<CustomField>
    <fullName>Job_Number_Last_5__c</fullName>
    <formula>VALUE(RIGHT( Job_Number__c , 5))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Number Last 5</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>