force-app/main/default/objects/ATI_Job__c/fields/Job_Number_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Job_Number_Sequence__c</fullName>
    <description>Contains the sequential aspect of the job number for this job. This is pulled from the lead record and should not be manually updated.</description>
    <externalId>true</externalId>
    <label>Job Number Sequence</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>