force-app/main/default/objects/ATI_Job__c/fields/Job_Opportunity_Matched__c.field-meta.xml
<CustomField>
    <fullName>Job_Opportunity_Matched__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used for job opportunity matching review only. Temporary. Will delete this after review is completed.</description>
    <label>Job Opportunity Matched</label>
    <type>Checkbox</type>
</CustomField>