force-app/main/default/objects/ATI_Job__c/fields/Job_Prev_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Prev_Name__c</fullName>
    <label>Job Prev Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>