force-app/main/default/objects/ATI_Job__c/fields/Job_Prev_Number__c.field-meta.xml
<CustomField>
    <fullName>Job_Prev_Number__c</fullName>
    <label>Job Prev Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>