force-app/main/default/objects/ATI_Job__c/fields/Job_Request_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Job_Request_Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Request Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Jobs5</relationshipName>
    <type>Lookup</type>
</CustomField>