force-app/main/default/objects/ATI_Job__c/fields/Job_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Start_Date__c</fullName>
    <description>Field to indicate projected start date of a job</description>
    <inlineHelpText>Auto time stamped when the job is marked won.</inlineHelpText>
    <label>Job Start Date</label>
    <type>DateTime</type>
</CustomField>