force-app/main/default/objects/ATI_Job__c/fields/Job_Start_Year__c.field-meta.xml
<CustomField>
    <fullName>Job_Start_Year__c</fullName>
    <formula>TEXT(YEAR(DATEVALUE(Job_Start_Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Start Year</label>
    <type>Text</type>
</CustomField>