force-app/main/default/objects/ATI_Job__c/fields/Job_Subclass__c.field-meta.xml
<CustomField>
    <fullName>Job_Subclass__c</fullName>
    <label>Job Subclass</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Job_Vertical__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Airports</fullName>
            </value>
            <value>
                <fullName>Amusement Park</fullName>
            </value>
            <value>
                <fullName>Apartment/s</fullName>
            </value>
            <value>
                <fullName>Big Box Store</fullName>
            </value>
            <value>
                <fullName>Casino</fullName>
            </value>
            <value>
                <fullName>City Hall</fullName>
            </value>
            <value>
                <fullName>Community College</fullName>
            </value>
            <value>
                <fullName>Condo&apos;s</fullName>
            </value>
            <value>
                <fullName>Convention Center</fullName>
            </value>
            <value>
                <fullName>Day-Care</fullName>
            </value>
            <value>
                <fullName>Department Store</fullName>
            </value>
            <value>
                <fullName>Discount Store</fullName>
            </value>
            <value>
                <fullName>Drug Store</fullName>
            </value>
            <value>
                <fullName>FBI</fullName>
            </value>
            <value>
                <fullName>Federal Departments</fullName>
            </value>
            <value>
                <fullName>Fire Departments</fullName>
            </value>
            <value>
                <fullName>GSA</fullName>
            </value>
            <value>
                <fullName>Gym/Sports Club/Fitness Center</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Hotel, Motel, Lodge</fullName>
            </value>
            <value>
                <fullName>Institutional</fullName>
            </value>
            <value>
                <fullName>K-12 Schools</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Medical Building</fullName>
            </value>
            <value>
                <fullName>Military</fullName>
            </value>
            <value>
                <fullName>Mobile Home Park</fullName>
            </value>
            <value>
                <fullName>National Park Service</fullName>
            </value>
            <value>
                <fullName>Office Building</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Police/Sheriff Departments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>