force-app/main/default/objects/ATI_Job__c/fields/Job_to_Date_Cost_Workflow_Field__c.field-meta.xml
<CustomField>
    <fullName>Job_to_Date_Cost_Workflow_Field__c</fullName>
    <label>Job to Date Cost Workflow Field</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>