force-app/main/default/objects/ATI_Job__c/fields/Job_to_Date_Costs_RS__c.field-meta.xml
<CustomField>
    <fullName>Job_to_Date_Costs_RS__c</fullName>
    <label>Job-to-Date Costs</label>
    <summarizedField>Financial__c.Job_to_Date_Costs__c</summarizedField>
    <summaryForeignKey>Financial__c.ATI_Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>