force-app/main/default/objects/ATI_Job__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <description>Job Type populated by workflow &#39;Job Type update&#39; to be used in bonus calculations</description>
    <label>Job Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>