force-app/main/default/objects/ATI_Job__c/fields/Job_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Job_Vertical__c</fullName>
    <label>Job Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Federal Government</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>Industrial &amp; Commercial</fullName>
            </value>
            <value>
                <fullName>Multi-Family</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>State &amp; Municipality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>