force-app/main/default/objects/ATI_Job__c/fields/Job_Walk__c.field-meta.xml
<CustomField>
    <fullName>Job_Walk__c</fullName>
    <formula>IF (ISBLANK( Inspected__c ), 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Walk</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>