force-app/main/default/objects/ATI_Job__c/fields/JTD_Costs_YTD_Costs__c.field-meta.xml
<CustomField>
    <fullName>JTD_Costs_YTD_Costs__c</fullName>
    <label>JTD Costs - YTD Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>