force-app/main/default/objects/ATI_Job__c/fields/JTD_Profit_RS__c.field-meta.xml
<CustomField>
    <fullName>JTD_Profit_RS__c</fullName>
    <label>Job-to-Date GP</label>
    <summarizedField>Financial__c.JTD_Profit__c</summarizedField>
    <summaryForeignKey>Financial__c.ATI_Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>