force-app/main/default/objects/ATI_Job__c/fields/Ladder_Assist__c.field-meta.xml
<CustomField>
    <fullName>Ladder_Assist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ladder Assist</label>
    <type>Checkbox</type>
</CustomField>