force-app/main/default/objects/ATI_Job__c/fields/Large_Loss_Flag__c.field-meta.xml
<CustomField>
    <fullName>Large_Loss_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Large Loss Flag</label>
    <type>Checkbox</type>
</CustomField>