force-app/main/default/objects/ATI_Job__c/fields/Last_FotoIn_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_FotoIn_Update__c</fullName>
    <label>Last FotoIn Update</label>
    <type>DateTime</type>
</CustomField>