force-app/main/default/objects/ATI_Job__c/fields/Last_Marketing_Note_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Marketing_Note_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Marketing Note By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Jobs5</relationshipName>
    <type>Lookup</type>
</CustomField>