force-app/main/default/objects/ATI_Job__c/fields/Last_Month_Costs_RS__c.field-meta.xml
<CustomField>
    <fullName>Last_Month_Costs_RS__c</fullName>
    <label>Last Month Costs</label>
    <summarizedField>Financial__c.Last_Month_Costs__c</summarizedField>
    <summaryForeignKey>Financial__c.ATI_Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>