force-app/main/default/objects/ATI_Job__c/fields/Last_NCLS_Approval_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_NCLS_Approval_Date_and_Time__c</fullName>
    <label>Last NCLS Approval Date/Time</label>
    <type>DateTime</type>
</CustomField>