force-app/main/default/objects/ATI_Job__c/fields/Last_NCLS_Approver__c.field-meta.xml
<CustomField>
    <fullName>Last_NCLS_Approver__c</fullName>
    <label>Last NCLS Approver</label>
    <length>50</length>
    <type>Text</type>
</CustomField>