force-app/main/default/objects/ATI_Job__c/fields/Last_NCLS_Comment__c.field-meta.xml
<CustomField>
    <fullName>Last_NCLS_Comment__c</fullName>
    <label>Last NCLS Comment</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>