force-app/main/default/objects/ATI_Job__c/fields/Last_Project_Note_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Project_Note_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Project Note By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Jobs7</relationshipName>
    <type>Lookup</type>
</CustomField>