force-app/main/default/objects/ATI_Job__c/fields/Last_Project_Note_Comment__c.field-meta.xml
<CustomField>
    <fullName>Last_Project_Note_Comment__c</fullName>
    <label>Last Project Note Comment</label>
    <type>TextArea</type>
</CustomField>