force-app/main/default/objects/ATI_Job__c/fields/Last_Project_Note_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Project_Note_Date_Time__c</fullName>
    <label>Last Project Note Date/Time</label>
    <type>DateTime</type>
</CustomField>