force-app/main/default/objects/ATI_Job__c/fields/Last_Successful_Timberline_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Successful_Timberline_Update__c</fullName>
    <description>Date of last successful Timberline update.</description>
    <label>Last Successful Timberline Update</label>
    <type>DateTime</type>
</CustomField>